--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
         var el = document.getElementById("buttoncontact");
         var el2 = document.getElementById("textbuttoncontact");
         var el3 = document.getElementById("contactinformation")
+        var el4 = document.getElementById("divbutton3").getElementsByTagName("div")[0];
+        var el5 = document.getElementById("contactinformation2")
+        if (el5.style.visibility == "visible")
+            el4.click();
         if(el3.style.visibility  != "visible"){
             el.src = "resources/imgindex/buttondown.png";
             el2.style.color = "black"
@@ -24,6 +28,10 @@
             var el = document.getElementById("buttonproduct");
             var el2 = document.getElementById("textbuttonproduct");
             var el3 = document.getElementById("contactinformation2")
+            var el4 = document.getElementById("divbutton1").getElementsByTagName("div")[0];
+            var el5 = document.getElementById("contactinformation")
+            if (el5.style.visibility == "visible")
+                el4.click();
             if (el3.style.visibility != "visible") {
                 el.src = "resources/imgindex/buttondown.png";
                 el2.style.color = "black"
@@ -37,6 +45,9 @@
 </script>
  </head>
  <body>
+    <div class="logo1">
+        <div class="logo2"></div>
+    </div>
 <div id="divbutton1">
     <div id="divbutton2" onclick="clickbuttoncont()">
         <img id="buttoncontact" src="resources/imgindex/buttonup.png" ></img>
@@ -88,18 +99,33 @@
         <div class="marginclass"></div>
         <div class="marginclass"></div>
         <div class="marginclass"></div>
-        <a href="/dueler/" class= ""><div class="opacitychange"><img class="iconsbig2" src="resources/imgindex/dueler.png"></img></div></a>
+        <div class="underline"></div>
         <div class="marginclass"></div>
         <div class="marginclass"></div>
+        
+        <div style="width:100%;height: 8px;"></div>
+        <a href="/dueler/" class="opacitychange"><img class="iconsbig2" src="resources/imgindex/dueler.png"></img></a>
+        <div style="width:100%;height: 18px;"></div>
         <div class="marginclass"></div>
-        <a href="/" class="opacitychange"><img class="iconsbig2" src="resources/imgindex/logoname.png"></img></a>
+        <div class="underline"></div>
+
+        <div class="marginclass"></div>
+        
+        <div class="marginclass"></div>
+        <div style="width:100%;height: 22px;"></div>
+        <a href="/" class="opacitychange"><img class="iconsbig3" src="resources/imgindex/logonamewhite.png"></img></a>
+        <div style="width:100%;height: 18px;"></div>
+        <div class="marginclass"></div>
+        <div class="underline"></div>
     </div>
 
 </div>
-<div class="logo"></div>
+
 <img class="comingsoon" src="resources/imgindex/comingsoon.png"></img>
 <div id="logoname">
 <img id="logonamepic" src="resources/imgindex/logoname.png"></img>
+<div class="marginclass"></div>
+<div class="marginclass"></div>
 <div class="marginclass"></div>
 <div class="marginclass"></div>
 <a class="greytextrightalign">The world's first ingame betting platform based on AI.</a>
