--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 <div></div>
 <a class="greytextrightalign">And our AI will honestly determine</a>
 <div></div>
-<a class="greytextrightalign">the winter.</a>
+<a class="greytextrightalign">the winner.</a>
 </div>
 </body>
 </html>
