--- a/registration.html
+++ b/registration.html
@@ -6,8 +6,14 @@
 <link rel="stylesheet" href="resources/style.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script type="text/javascript">
+    function validateEmail(emailAddress) {
+            var regularExpression = /^((([a-z]|\d|[!#\$%&'\*\+\-\/=\?\^_`{\|}~]|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])+(\.([a-z]|\d|[!#\$%&'\*\+\-\/=\?\^_`{\|}~]|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])+)*)|((\x22)((((\x20|\x09)*(\x0d\x0a))?(\x20|\x09)+)?(([\x01-\x08\x0b\x0c\x0e-\x1f\x7f]|\x21|[\x23-\x5b]|[\x5d-\x7e]|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])|(\\([\x01-\x09\x0b\x0c\x0d-\x7f]|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF]))))*(((\x20|\x09)*(\x0d\x0a))?(\x20|\x09)+)?(\x22)))@((([a-z]|\d|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])|(([a-z]|\d|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])([a-z]|\d|-|\.|_|~|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])*([a-z]|\d|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])))\.)+(([a-z]|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])|(([a-z]|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])([a-z]|\d|-|\.|_|~|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])*([a-z]|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF]))){2,6}$/i;
+            return regularExpression.test(emailAddress);
+        }
     function submitform() {
-        if ($("#password").val()!=$("#password2").val()) return;
+        if ($("#password").val()!=$("#password2").val()){ alert("Passwords don't match "); return;}
+        if(!validateEmail($("#email").val())){ alert("E-mail isn't valid"); return;}
+         if ($("#password").val().length<8) { alert("Passwords is too low"); return; }
         var v = $("#form1").serializeArray()
         var b = v.reduce((res, el) => {
             res[el.name] = el.value;
@@ -52,7 +58,7 @@
 <form method="post" onSubmit="return false" action="#" name="form1" id="form1">
     <div>
         <img class="icons"src="resources/img/logicon.png"></img>
-        <input class="textinsertion" placeholder="E-mail" type="text" name="login">
+        <input id="email" class="textinsertion" placeholder="E-mail" type="text" name="login">
     </div>
         <div class = "underline"></div>
         <div class = "marginclass"></div>
