--- a/dueler.html
+++ b/dueler.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Dueler</title>
     <link rel="stylesheet" href="../resources/stylecssdueler.css">
+    <link rel="icon" href="../resources/favicon.ico">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript">
     function clickbuttoncont() {
