--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Challenger</title>
 <link rel="stylesheet" href="resources/styleindex.css">
+<link rel="icon" href="resources/favicon.ico">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script type="text/javascript">
     function clickbuttoncont(){
