--- a/registration.html
+++ b/registration.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Registration</title>
 <link rel="stylesheet" href="resources/style.css">
+<link rel="icon" href="resources/favicon.ico">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script type="text/javascript">
     function validateEmail(emailAddress) {
