--- a/dueler.html
+++ b/dueler.html
@@ -128,7 +128,7 @@
     </a>
 </div>
 <div id="divbutton5">
-    <a href="../account/register/">
+    <a href="http://challenger.userforum.ru">
         <div id="divbutton2100">
             <p id="textbuttonforum" class="texted centered">FORUM</p>
         </div>
@@ -142,13 +142,56 @@
     </a>
 </div>
 <img id="logonamepic" src="../resources/imgindex/dueler.png"></img>
-<div id="logoname">
-    <div style="text-align: center;">
-    <img style="width: 100%;" src="../resources/imgdueler/liderboard.jpg"></img>
-        </div>
+<div id="liderboarddiv">
+        <p  class="texted">LIDERBOARD</p>
+        <div></div>
+        <img  src="../resources/img/logicon.png"></img>
+        <img style="height: 34px;" src="../resources/imgindex/comingsoon.png"></img>
+        <img style="height: 28px;" src="../resources/imgdueler/prize.png"></img>
+        <a class="texted">7500 gold</a>
+        <div></div>
+        <img src="../resources/img/logicon.png"></img>
+        <img style="height: 34px;" src="../resources/imgindex/comingsoon.png"></img>
+        <img style="height: 28px;" src="../resources/imgdueler/prize.png"></img>
+        <a class="texted">5000 gold</a>
+        <div></div>
+        <img src="../resources/img/logicon.png"></img>
+        <img style="height: 34px;" src="../resources/imgindex/comingsoon.png"></img>
+                <img style="height: 28px;" src="../resources/imgdueler/prize.png"></img>
+                <a class="texted">2500 gold</a>
+        <div></div>
+        <img src="../resources/img/logicon.png"></img>
+        <img style="height: 34px;" src="../resources/imgindex/comingsoon.png"></img>
+                <img style="height: 28px;" src="../resources/imgdueler/prize.png"></img>
+                <a class="texted">1000 gold</a>
+        <div></div>
+        <img src="../resources/img/logicon.png"></img>
+        <img style="height: 34px;" src="../resources/imgindex/comingsoon.png"></img>
+                <img style="height: 28px;" src="../resources/imgdueler/prize.png"></img>
+                <a class="texted">500 gold</a>
+        <div></div>
+        <img src="../resources/img/logicon.png"></img>
+        <img style="height: 34px;" src="../resources/imgindex/comingsoon.png"></img>
+                <img style="height: 28px;" src="../resources/imgdueler/prize.png"></img>
+                <a class="texted">500 gold</a>
+        <div></div>
+        <img src="../resources/img/logicon.png"></img>
+        <img style="height: 34px;" src="../resources/imgindex/comingsoon.png"></img>
+                <img style="height: 28px;" src="../resources/imgdueler/prize.png"></img>
+                <a class="texted">500 gold</a>
+        <div></div>
+        <img src="../resources/img/logicon.png"></img>
+        <img style="height: 34px;" src="../resources/imgindex/comingsoon.png"></img>
+                <img style="height: 28px;" src="../resources/imgdueler/prize.png"></img>
+                <a class="texted">500 gold</a>
+        <div></div>
+        <img src="../resources/img/logicon.png"></img>
+        <img style="height: 34px;" src="../resources/imgindex/comingsoon.png"></img>
+                <img style="height: 28px;" src="../resources/imgdueler/prize.png"></img>
+                <a class="texted">500 gold</a>
     </div>
 </div>
-<div class="comingsoon">
+<!-- <div class="comingsoon">
     <div id="leftborderprize">
         <img id="leftimgprize" src="../resources/imgdueler/prizes/2.jpg"></img>
         <p id="textleftprize">II</p>
@@ -161,7 +204,7 @@
         <img id="rightimgprize" src="../resources/imgdueler/prizes/3.jpg"></img>
         <p id="textrightprize">III</p>
     </div>
-</div>
+</div> -->
 
 </body>
 
