--- a/registration.html
+++ b/registration.html
@@ -52,7 +52,7 @@
  </head>
  <body>
     <div id="divbutton4">
-        <a href="{{.Host}}/wotmod/Dueler.zip" download="Dueler.zip" target="_blank" id="download2">
+        <a href="../../wotmod/Dueler.zip" download="Dueler.zip" target="_blank" id="download2">
             <div id="divbutton2100">
                 <img id="buttoncontact" src="../../resources/imgindex/buttonup.png"></img>
                 <p id="textbuttonregister" class="texted centered">DOWNLOAD</p>
@@ -100,6 +100,6 @@
 </div>
 </form>
 </div>
-<a href="{{.Host}}/wotmod/Dueler.zip" download="Dueler.zip" id="download" hidden></a>
+<a href="../../wotmod/Dueler.zip" download="Dueler.zip" id="download" hidden></a>
 </body>
 </html>
