--- a/dueler.html
+++ b/dueler.html
@@ -146,65 +146,81 @@
         <p  class="texted">LIDERBOARD</p>
         <div></div>
         <img  src="../resources/img/logicon.png"></img>
-        <img style="height: 34px;" src="../resources/imgindex/comingsoon.png"></img>
+        <div class="blockPlayear">
+            <a class="texted" style="width:150px;">{{.Player1}}</a>
+            <img src="../resources/imgdueler/line.png" style="height:4px;width:{{.Player1Width}}px; display: inline-block;"></img>
+        </div>
         <img style="height: 28px;" src="../resources/imgdueler/prize.png"></img>
         <a class="texted">7500 gold</a>
         <div></div>
         <img src="../resources/img/logicon.png"></img>
-        <img style="height: 34px;" src="../resources/imgindex/comingsoon.png"></img>
+        <div class="blockPlayear">
+            <a class="texted" style="width:150px;">{{.Player2}}</a>
+            <img src="../resources/imgdueler/line.png" style="height:4px;width:{{.Player2Width}}px; display: inline-block;"></img>
+        </div>
         <img style="height: 28px;" src="../resources/imgdueler/prize.png"></img>
         <a class="texted">5000 gold</a>
         <div></div>
         <img src="../resources/img/logicon.png"></img>
-        <img style="height: 34px;" src="../resources/imgindex/comingsoon.png"></img>
+        <div class="blockPlayear">
+            <a class="texted" style="width:150px;">{{.Player3}}</a>
+            <img src="../resources/imgdueler/line.png" style="height:4px;width:{{.Player3Width}}px; display: inline-block;"></img>
+        </div>
                 <img style="height: 28px;" src="../resources/imgdueler/prize.png"></img>
                 <a class="texted">2500 gold</a>
         <div></div>
         <img src="../resources/img/logicon.png"></img>
-        <img style="height: 34px;" src="../resources/imgindex/comingsoon.png"></img>
+        <div class="blockPlayear">
+            <a class="texted" style="width:150px;">{{.Player4}}</a>
+            <img src="../resources/imgdueler/line.png" style="height:4px;width:{{.Player4Width}}px; display: inline-block;"></img>
+        </div>
                 <img style="height: 28px;" src="../resources/imgdueler/prize.png"></img>
                 <a class="texted">1000 gold</a>
         <div></div>
         <img src="../resources/img/logicon.png"></img>
-        <img style="height: 34px;" src="../resources/imgindex/comingsoon.png"></img>
+                                <div class="blockPlayear">
+                                    <a class="texted" style="width:150px;">{{.Player5}}</a>
+                                    <img src="../resources/imgdueler/line.png" style="height:4px;width:{{.Player5Width}}px; display: inline-block;"></img>
+                                </div>
                 <img style="height: 28px;" src="../resources/imgdueler/prize.png"></img>
                 <a class="texted">500 gold</a>
         <div></div>
         <img src="../resources/img/logicon.png"></img>
-        <img style="height: 34px;" src="../resources/imgindex/comingsoon.png"></img>
+                <div class = "blockPlayear">
+                    <a class="texted" style="width:150px;">{{.Player6}}</a>
+                    <img src="../resources/imgdueler/line.png" style="height:4px;width:{{.Player6Width}}px; display: inline-block;"></img>
+                </div>
                 <img style="height: 28px;" src="../resources/imgdueler/prize.png"></img>
                 <a class="texted">500 gold</a>
         <div></div>
         <img src="../resources/img/logicon.png"></img>
-        <img style="height: 34px;" src="../resources/imgindex/comingsoon.png"></img>
+        <div class="blockPlayear">
+            <a class="texted" style="width:150px;">{{.Player7}}</a>
+            <img src="../resources/imgdueler/line.png" style="height:4px;width:{{.Player7Width}}px; display: inline-block;"></img>
+        </div>
                 <img style="height: 28px;" src="../resources/imgdueler/prize.png"></img>
                 <a class="texted">500 gold</a>
         <div></div>
         <img src="../resources/img/logicon.png"></img>
-        <img style="height: 34px;" src="../resources/imgindex/comingsoon.png"></img>
+        <div class="blockPlayear">
+            <a class="texted" style="width:150px;">{{.Player8}}</a>
+            <img src="../resources/imgdueler/line.png" style="height:4px;width:{{.Player8Width}}px; display: inline-block;"></img>
+        </div>
                 <img style="height: 28px;" src="../resources/imgdueler/prize.png"></img>
                 <a class="texted">500 gold</a>
         <div></div>
         <img src="../resources/img/logicon.png"></img>
-        <img style="height: 34px;" src="../resources/imgindex/comingsoon.png"></img>
+    <div class="blockPlayear">
+        <a class="texted" style="width:150px;">{{.Player9}}</a>
+        <img src="../resources/imgdueler/line.png" style="height:4px;width:{{.Player9Width}}px; display: inline-block;"></img>
+    </div>
                 <img style="height: 28px;" src="../resources/imgdueler/prize.png"></img>
                 <a class="texted">500 gold</a>
     </div>
 </div>
-<!-- <div class="comingsoon">
-    <div id="leftborderprize">
-        <img id="leftimgprize" src="../resources/imgdueler/prizes/2.jpg"></img>
-        <p id="textleftprize">II</p>
-    </div>
-    <div id="centerborderprize">
-        <img id="centerimgprize" src="../resources/imgdueler/prizes/1.jpg"></img>
-        <p id="textcenterprize">I</p>
-    </div>
-    <div id="rightborderprize">
-        <img id="rightimgprize" src="../resources/imgdueler/prizes/3.jpg"></img>
-        <p id="textrightprize">III</p>
-    </div>
-</div> -->
+<div class="comingsoon">
+    <a class="texted">First tournament: Start December 25, Finish: 5 January </a>
+</div>
 
 </body>
 
