--- a/dueler.html
+++ b/dueler.html
@@ -148,7 +148,7 @@
         <img  src="../resources/img/logicon.png"></img>
         <div class="blockPlayear">
             <a class="texted" style="width:300px;">{{.Player1}}</a>
-            <img src="../resources/imgdueler/line.png" style="height:4px;width:{{.Player1Width}}px; display: inline-block;"></img>
+            <img src="../resources/imgdueler/line.png" style="height:4px;width:{{.Player1Width}}px; display: block;"></img>
         </div>
         <img style="height: 28px;" src="../resources/imgdueler/prize.png"></img>
         <a class="texted">7500 gold</a>
@@ -156,7 +156,7 @@
         <img src="../resources/img/logicon.png"></img>
         <div class="blockPlayear">
             <a class="texted" style="width:300px;">{{.Player2}}</a>
-            <img src="../resources/imgdueler/line.png" style="height:4px;width:{{.Player2Width}}px; display: inline-block;"></img>
+            <img src="../resources/imgdueler/line.png" style="height:4px;width:{{.Player2Width}}px; display: block;"></img>
         </div>
         <img style="height: 28px;" src="../resources/imgdueler/prize.png"></img>
         <a class="texted">5000 gold</a>
@@ -164,7 +164,7 @@
         <img src="../resources/img/logicon.png"></img>
         <div class="blockPlayear">
             <a class="texted" style="width:300px;">{{.Player3}}</a>
-            <img src="../resources/imgdueler/line.png" style="height:4px;width:{{.Player3Width}}px; display: inline-block;"></img>
+            <img src="../resources/imgdueler/line.png" style="height:4px;width:{{.Player3Width}}px; display: block;"></img>
         </div>
                 <img style="height: 28px;" src="../resources/imgdueler/prize.png"></img>
                 <a class="texted">2500 gold</a>
@@ -172,7 +172,7 @@
         <img src="../resources/img/logicon.png"></img>
         <div class="blockPlayear">
             <a class="texted" style="width:300px;">{{.Player4}}</a>
-            <img src="../resources/imgdueler/line.png" style="height:4px;width:{{.Player4Width}}px; display: inline-block;"></img>
+            <img src="../resources/imgdueler/line.png" style="height:4px;width:{{.Player4Width}}px; display: block;"></img>
         </div>
                 <img style="height: 28px;" src="../resources/imgdueler/prize.png"></img>
                 <a class="texted">1000 gold</a>
@@ -180,7 +180,7 @@
         <img src="../resources/img/logicon.png"></img>
                                 <div class="blockPlayear">
                                     <a class="texted" style="width:150px;">{{.Player5}}</a>
-                                    <img src="../resources/imgdueler/line.png" style="height:4px;width:{{.Player5Width}}px; display: inline-block;"></img>
+                                    <img src="../resources/imgdueler/line.png" style="height:4px;width:{{.Player5Width}}px; display: block;"></img>
                                 </div>
                 <img style="height: 28px;" src="../resources/imgdueler/prize.png"></img>
                 <a class="texted">500 gold</a>
@@ -188,7 +188,7 @@
         <img src="../resources/img/logicon.png"></img>
                 <div class = "blockPlayear">
                     <a class="texted" style="width:150px;">{{.Player6}}</a>
-                    <img src="../resources/imgdueler/line.png" style="height:4px;width:{{.Player6Width}}px; display: inline-block;"></img>
+                    <img src="../resources/imgdueler/line.png" style="height:4px;width:{{.Player6Width}}px; display: block;"></img>
                 </div>
                 <img style="height: 28px;" src="../resources/imgdueler/prize.png"></img>
                 <a class="texted">500 gold</a>
@@ -196,7 +196,7 @@
         <img src="../resources/img/logicon.png"></img>
         <div class="blockPlayear">
             <a class="texted" style="width:300px;">{{.Player7}}</a>
-            <img src="../resources/imgdueler/line.png" style="height:4px;width:{{.Player7Width}}px; display: inline-block;"></img>
+            <img src="../resources/imgdueler/line.png" style="height:4px;width:{{.Player7Width}}px; display: block;"></img>
         </div>
                 <img style="height: 28px;" src="../resources/imgdueler/prize.png"></img>
                 <a class="texted">500 gold</a>
@@ -204,7 +204,7 @@
         <img src="../resources/img/logicon.png"></img>
         <div class="blockPlayear">
             <a class="texted" style="width:300px;">{{.Player8}}</a>
-            <img src="../resources/imgdueler/line.png" style="height:4px;width:{{.Player8Width}}px; display: inline-block;"></img>
+            <img src="../resources/imgdueler/line.png" style="height:4px;width:{{.Player8Width}}px; display: block;"></img>
         </div>
                 <img style="height: 28px;" src="../resources/imgdueler/prize.png"></img>
                 <a class="texted">500 gold</a>
@@ -212,7 +212,7 @@
         <img src="../resources/img/logicon.png"></img>
     <div class="blockPlayear">
         <a class="texted" style="width:300px;">{{.Player9}}</a>
-        <img src="../resources/imgdueler/line.png" style="height:4px;width:{{.Player9Width}}px; display: inline-block;"></img>
+        <img src="../resources/imgdueler/line.png" style="height:4px;width:{{.Player9Width}}px; display: block;"></img>
     </div>
                 <img style="height: 28px;" src="../resources/imgdueler/prize.png"></img>
                 <a class="texted">500 gold</a>
