--- a/dueler.html
+++ b/dueler.html
@@ -146,7 +146,7 @@
         <p  class="texted">LIDERBOARD</p>
         <div></div>
         <img  src="../resources/img/logicon.png"></img>
-        <div class="blockPlayear">
+        <div class="blockPlayer">
             <a class="texted" style="width:300px;">{{.Player1}}</a>
             <img src="../resources/imgdueler/line.png" style="height:4px;width:{{.Player1Width}}px; display: block;"></img>
         </div>
@@ -154,7 +154,7 @@
         <a class="texted">7500 gold</a>
         <div></div>
         <img src="../resources/img/logicon.png"></img>
-        <div class="blockPlayear">
+        <div class="blockPlayer">
             <a class="texted" style="width:300px;">{{.Player2}}</a>
             <img src="../resources/imgdueler/line.png" style="height:4px;width:{{.Player2Width}}px; display: block;"></img>
         </div>
@@ -162,7 +162,7 @@
         <a class="texted">5000 gold</a>
         <div></div>
         <img src="../resources/img/logicon.png"></img>
-        <div class="blockPlayear">
+        <div class="blockPlayer">
             <a class="texted" style="width:300px;">{{.Player3}}</a>
             <img src="../resources/imgdueler/line.png" style="height:4px;width:{{.Player3Width}}px; display: block;"></img>
         </div>
@@ -170,7 +170,7 @@
                 <a class="texted">2500 gold</a>
         <div></div>
         <img src="../resources/img/logicon.png"></img>
-        <div class="blockPlayear">
+        <div class="blockPlayer">
             <a class="texted" style="width:300px;">{{.Player4}}</a>
             <img src="../resources/imgdueler/line.png" style="height:4px;width:{{.Player4Width}}px; display: block;"></img>
         </div>
@@ -186,7 +186,7 @@
                 <a class="texted">500 gold</a>
         <div></div>
         <img src="../resources/img/logicon.png"></img>
-                <div class = "blockPlayear">
+                <div class = "blockPlayer">
                     <a class="texted" style="width:150px;">{{.Player6}}</a>
                     <img src="../resources/imgdueler/line.png" style="height:4px;width:{{.Player6Width}}px; display: block;"></img>
                 </div>
@@ -194,7 +194,7 @@
                 <a class="texted">500 gold</a>
         <div></div>
         <img src="../resources/img/logicon.png"></img>
-        <div class="blockPlayear">
+        <div class="blockPlayer">
             <a class="texted" style="width:300px;">{{.Player7}}</a>
             <img src="../resources/imgdueler/line.png" style="height:4px;width:{{.Player7Width}}px; display: block;"></img>
         </div>
@@ -202,7 +202,7 @@
                 <a class="texted">500 gold</a>
         <div></div>
         <img src="../resources/img/logicon.png"></img>
-        <div class="blockPlayear">
+        <div class="blockPlayer">
             <a class="texted" style="width:300px;">{{.Player8}}</a>
             <img src="../resources/imgdueler/line.png" style="height:4px;width:{{.Player8Width}}px; display: block;"></img>
         </div>
@@ -210,7 +210,7 @@
                 <a class="texted">500 gold</a>
         <div></div>
         <img src="../resources/img/logicon.png"></img>
-    <div class="blockPlayear">
+    <div class="blockPlayer">
         <a class="texted" style="width:300px;">{{.Player9}}</a>
         <img src="../resources/imgdueler/line.png" style="height:4px;width:{{.Player9Width}}px; display: block;"></img>
     </div>
