--- a/dueler.html
+++ b/dueler.html
@@ -178,7 +178,7 @@
                 <a class="texted">1000 gold</a>
         <div></div>
         <img src="../resources/img/logicon.png"></img>
-                                <div class="blockPlayear">
+                                <div class="blockPlayer">
                                     <a class="texted" style="width:150px;">{{.Player5}}</a>
                                     <img src="../resources/imgdueler/line.png" style="height:4px;width:{{.Player5Width}}px; display: block;"></img>
                                 </div>
